# delarocha

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
bindings/rust/: Cargo.toml  build.rs
bindings/rust/benches/: tokenize.rs
bindings/rust/examples/: binary_text_bench.rs  memory.rs  vibrato_style_benchmark.rs  yokohama_text_bench.rs
bindings/rust/prebuilt/: README.md
bindings/rust/prebuilt/i686-pc-windows-msvc/: delarocha_zig.lib
bindings/rust/prebuilt/x86_64-pc-windows-msvc/: delarocha_zig.lib
bindings/rust/src/: lib.rs  main.rs
bindings/rust/tests/: fuzz_tokenizer.rs  tokenizer.rs  vibrato_system_dictionary.rs  vibrato_tokenizer.rs  zig_ffi.rs
fixtures/: char.def  lex.csv  minimal.dict  unk.def
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dictionary.rs  tokenize.rs
playground/: app.js  index.html  styles.css
scripts/: extract_yokohama_reiki_text.py  prepare_ipadic_playground.py
zig/: build.zig
zig/src/: bench.zig  dictionary.zig  ffi.zig  lib.zig  tokenizer.zig
