[package]
name = "delarocha-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
delarocha = { path = "../bindings/rust" }
libfuzzer-sys = "0.4"

[[bin]]
name = "tokenize"
path = "fuzz_targets/tokenize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dictionary"
path = "fuzz_targets/dictionary.rs"
test = false
doc = false
bench = false
