[package]
name = "delarocha"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]
vibrato-system = ["dep:vibrato", "dep:zstd"]
zig-ffi = []
vibrato-bench = ["vibrato-system"]

[dependencies]
csv = "1"
memmap2 = "0.9"
thiserror = "2"
vibrato = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "tokenize"
harness = false
